--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<link rel="shortcut icon" href="favicon.svg" type="image/svg" />
+		<link rel="shortcut icon" href="favicon.png" type="image/png" />
 
 		<title>PicBook</title>
 	</head>
