Added Header with Condition and Fixed some styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,8 +16,14 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<link rel="shortcut icon" href="favicon.png" type="image/png" />
-
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<meta name="apple-mobile-web-app-title" content="PicBook" />
+		<meta name="application-name" content="PicBook" />
+		<meta name="msapplication-TileColor" content="#603cba" />
+		<meta name="theme-color" content="#1E004B" />
 		<title>PicBook</title>
 	</head>
 	<body>
